--- a/.github/workflows/buildlunahook.yml
+++ b/.github/workflows/buildlunahook.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        bits: [32, 64]
+        bits: ["x32", "x64"]
     permissions:
       id-token: write
       attestations: write
@@ -76,7 +76,7 @@ jobs:
       - uses: GuillaumeFalourd/setup-windows10-sdk-action@v2
         with:
           sdk-version: 26100
-      - run: python src/scripts/build_lunahook.py build x64 0 win7
+      - run: python src/scripts/build_lunahook.py build ${{matrix.bits}} 0 win7
 
       - uses: actions/upload-artifact@v4
         with:
