--- a/.github/workflows/buildlunahook.yml
+++ b/.github/workflows/buildlunahook.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build_xp:
-    runs-on: windows-2019
+    runs-on: windows-latest
     permissions:
       id-token: write
       attestations: write
