--- a/.github/workflows/buildlunahook.yml
+++ b/.github/workflows/buildlunahook.yml
@@ -11,6 +11,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+      - run: src\scripts\install_msvc.bat v141_xp
       - uses: GuillaumeFalourd/setup-windows10-sdk-action@v2
         with:
           sdk-version: 26100
